# fastapi-app-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  run.py  sample.env
api/routes/: api.py  auth.py  users.py
app/: create_app.py  deps.py  di.py  main.py
app/core/: config.py
app/middleware/: authentication.py
app/repository/: mongo.py  user.py
app/schema/: auth.py  mongo.py  response.py  token.py  user.py
app/schema/mongo_search/: features.py  model.py  params.py
app/utils/: auth.py
requests/: main.http
src/: create_app.py  deps.py  di.py  main.py
src/api/routes/: api.py  auth.py  users.py
src/core/: config.py
src/middleware/: authentication.py
src/repository/: mongo.py  user.py
src/schema/: README.md  mongo.py  response.py  user.py  version.py
src/schema/mongo_search/: features.py  model.py
src/utils/: auth.py
tests/utils/: test_auth.py
